[package]
name = "fdisk-sys"
version = "0.1.0"
authors = ["Aaron Brodersen <aaron@resin.io>"]
links="fdisk"
license="Apache-2.0"
description="""
Bindings to libfdisk for manipulating disk partitions.
"""
categories = ["external-ffi-bindings"]

[lib]
name = "fdisk_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.32"

